enhanced admin's UsersTable and admin User page